MEDIUM: switched to version 4.10 of junit Increased perm gen size for surefire tests